<resources>
    <string name="app_name">GeoQuiz</string>
    <string name="before">BEFORE</string>
    <string name="next">NEXT</string>
    <string name="true_btn">true</string>
    <string name="false_btn">false</string>
    <string name="you_right">GOOD! You are right.</string>
    <string name="you_wrong">SORRY! You are wrong.</string>
    <string name="question_australia">Canberra is the capital of Australia.</string>
    <string name="question_oceans">The Pacific Ocean is larger than the Atlantic Ocean</string>
    <string name="question_mideast">The Suez Canal connects the Red Sea and the Indian Ocean.</string>
    <string name="question_africa">The source of the Nile River is in Egypt</string>
    <string name="question_americas">The Amazon River is the longest river in the Americas.</string>
    <string name="question_asia">Lake Baikal is the world\'s oldest and deepest freshwater lake.</string>
    <string name="warning_text">Are you sure you want to do this?</string>
    <string name="show_answer_button">Cheat!</string>
    <string name="judgment_toast">Cheating is wrong.</string>
</resources>
